[package]
name = "composable_query_builder2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
itertools = "0.12.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time"] }
thiserror = "1.0.56"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"